refactor: Update BookRequestDTO and Book model annotations for required fields